--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,6 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+backend/backend.rar
+backend/Record_2024_12_14_11_00_55_579.mp4
+backend/Record_2024_12_14_13_07_17_720.mp4
