--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "boxicons": "^2.1.4",
     "dotenv": "^16.4.7",
     "react": "^18.3.1",
